# denki-yoho

./: .editorconfig  .gitignore  Dockerfile  Dockerfile-api  Dockerfile-local  Dockerfile-ui  Makefile  docker-compose.yml  pyproject.toml  setup.cfg  vetur.config.js
.devcontainer/: devcontainer.json
docker/ui/: Dockerfile
docker/web/: Dockerfile
server/: alembic.ini
server/api/: main.py
server/api/views/: __init__.py  forecast.py
server/commands/: import.py
server/commands/importer/: __init__.py  base.py  tokyo.py
server/data/: forecast.py
server/helpers/: constants.py  datetime.py
server/migration/: env.py
server/migration/versions/: 4f6208794336_create_forecasts.py
server/migrations/: env.py
server/migrations/versions/: 1324dd38accb_.py
server/models/: __init__.py  forecast.py  settings.py
server/repositories/: forecast.py
server/services/: __init__.py  forecast.py
ui/: openapi.json  package-lock.json  package.json  vite.config.ts
ui/src/: App.vue  api_client.ts  constants.ts
ui/src/api_client_tools/.openapi-generator/: FILES
ui/src/api_client_tools/apis/: DefaultApi.ts
ui/src/api_client_tools/models/: Area.ts  AreaDemandForecast.ts  DemandForecast.ts  DemandPeakForecast.ts  ForecastListResponse.ts  UsagePeakForecast.ts  index.ts
ui/src/components/: Forecast.vue
ui/src/models/: forecast.ts
web/nginx/conf.d/: app.conf
