[tool.poetry]
name = "denki-yoho"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
alembic = "^1.7.6"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
    migrations |
    .venv
)
'''

[tool.isort]
line_length = 119
skip_glob = "*/migrations/*.py"
